# amhello

./: Dockerfile  Jenkinsfile  configure.ac
src/: Makefile.am  hello.c  test_hello.cpp
